--- a/Carthage Sample/Carthage-sample-app/Base.lproj/Main.storyboard
+++ b/Carthage Sample/Carthage-sample-app/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Showcases-->
         <scene sceneID="WiL-RQ-9qM">
             <objects>
-                <tableViewController title="Showcases" id="CXl-n2-2nE" customClass="TrackedTableViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Showcases" id="CXl-n2-2nE" customClass="TrackedTableViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xn2-1l-J2q">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,7 @@
         <!--Dynamic Vars-->
         <scene sceneID="eQe-k7-gGX">
             <objects>
-                <viewController id="Yob-oZ-Oow" customClass="DynamicVariablesViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Yob-oZ-Oow" customClass="DynamicVariablesViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tzd-tA-RQ0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -222,7 +222,7 @@
         <!--Transactions-->
         <scene sceneID="JdA-vb-GYm">
             <objects>
-                <viewController id="vQf-zU-9jE" customClass="TransactionsViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vQf-zU-9jE" customClass="TransactionsViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6j8-qL-I0Y">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -270,7 +270,7 @@
         <!--Error Analysis-->
         <scene sceneID="6iJ-B0-FEy">
             <objects>
-                <viewController id="7aT-z6-47B" customClass="ErrorAnalysisViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="7aT-z6-47B" customClass="ErrorAnalysisViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Kh0-eR-Qfj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -310,6 +310,12 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some features are only available for iOS 15+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clR-RW-Sch">
+                                <rect key="frame" x="74" y="830" width="266.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="h5W-A8-j7q"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -317,11 +323,19 @@
                             <constraint firstItem="0zh-Dn-cFf" firstAttribute="top" secondItem="h5W-A8-j7q" secondAttribute="top" constant="40" id="1Ct-Cn-ldf"/>
                             <constraint firstItem="aiu-av-ccv" firstAttribute="centerX" secondItem="Kh0-eR-Qfj" secondAttribute="centerX" id="65a-RB-lS5"/>
                             <constraint firstItem="aiu-av-ccv" firstAttribute="centerY" secondItem="Kh0-eR-Qfj" secondAttribute="centerY" id="6MI-Vz-Qdp"/>
+                            <constraint firstItem="h5W-A8-j7q" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="clR-RW-Sch" secondAttribute="trailing" id="X9W-gQ-1kA"/>
                             <constraint firstItem="0zh-Dn-cFf" firstAttribute="leading" secondItem="h5W-A8-j7q" secondAttribute="leading" constant="20" id="oHZ-Od-GEu"/>
                             <constraint firstItem="h5W-A8-j7q" firstAttribute="trailing" secondItem="0zh-Dn-cFf" secondAttribute="trailing" constant="20" id="qq3-Vg-jlY"/>
+                            <constraint firstItem="clR-RW-Sch" firstAttribute="centerX" secondItem="Kh0-eR-Qfj" secondAttribute="centerX" id="uhy-Uq-qJe"/>
+                            <constraint firstItem="h5W-A8-j7q" firstAttribute="bottom" secondItem="clR-RW-Sch" secondAttribute="bottom" constant="16" id="ySx-hB-a26"/>
+                            <constraint firstItem="clR-RW-Sch" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="h5W-A8-j7q" secondAttribute="leading" id="zUN-YP-Ob1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Error Analysis" id="Q87-TZ-dAi"/>
+                    <connections>
+                        <outlet property="csAsyncMonitoringButton" destination="4g5-KP-trQ" id="PCq-X7-H0b"/>
+                        <outlet property="manualMonitoringButton" destination="zCC-2v-3aJ" id="xfS-Hz-Pmk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IZp-zK-HL7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -330,7 +344,7 @@
         <!--Privacy-->
         <scene sceneID="keg-YG-NI7">
             <objects>
-                <viewController id="V5M-pe-xMy" customClass="PrivacyViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="V5M-pe-xMy" customClass="PrivacyViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QQ1-Ae-vtg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -441,13 +455,13 @@
         <!--Masking-->
         <scene sceneID="CsN-KD-ZF2">
             <objects>
-                <viewController id="9ub-Y8-Aee" customClass="MaskingUseCasesViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9ub-Y8-Aee" customClass="MaskingUseCasesViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="L1G-Xh-6Ru">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose one of the following implementations" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofn-At-Exe">
-                                <rect key="frame" x="77" y="112" width="259" height="74"/>
+                                <rect key="frame" x="77.5" y="112" width="259" height="74"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -466,9 +480,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ofn-At-Exe" firstAttribute="top" secondItem="RyZ-IL-GPf" secondAttribute="top" constant="20" id="85L-Lx-Uih"/>
-                            <constraint firstItem="ofn-At-Exe" firstAttribute="leading" secondItem="RyZ-IL-GPf" secondAttribute="leading" constant="77" id="F6M-Ro-WeZ"/>
                             <constraint firstItem="ofn-At-Exe" firstAttribute="width" secondItem="L1G-Xh-6Ru" secondAttribute="width" multiplier="0.625604" id="PQT-dt-oeb"/>
                             <constraint firstItem="ofn-At-Exe" firstAttribute="height" secondItem="L1G-Xh-6Ru" secondAttribute="height" multiplier="0.0825893" id="yqN-6p-WAO"/>
+                            <constraint firstItem="ofn-At-Exe" firstAttribute="centerX" secondItem="L1G-Xh-6Ru" secondAttribute="centerX" id="yzR-79-Rsu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Masking" id="Dhb-2c-afw"/>
@@ -484,38 +498,51 @@
         <!--Masking-->
         <scene sceneID="bvi-5T-Iv8">
             <objects>
-                <viewController title="Masking" id="eYt-Cl-ZTm" customClass="MaskingViewController" customModule="SPM_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Masking" id="eYt-Cl-ZTm" customClass="MaskingViewController" customModule="Carthage_sample_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Um3-8d-cmS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Placeholder text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Px8-Vp-v77">
-                                <rect key="frame" x="89" y="147" width="237" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Placeholder text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Px8-Vp-v77">
+                                <rect key="frame" x="88.5" y="147" width="237" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="237" id="AsP-eZ-Oqn"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A public label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ok-9h-RKY">
-                                <rect key="frame" x="134" y="312" width="147" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A public label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ok-9h-RKY">
+                                <rect key="frame" x="156" y="312" width="102" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A private label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bs-PD-UYR">
-                                <rect key="frame" x="134" y="370" width="147" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A private label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bs-PD-UYR">
+                                <rect key="frame" x="153" y="370" width="108" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cs-logo" highlightedImage="cs-logo" translatesAutoresizingMaskIntoConstraints="NO" id="FX9-Jz-p5n">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cs-logo" highlightedImage="cs-logo" translatesAutoresizingMaskIntoConstraints="NO" id="FX9-Jz-p5n">
                                 <rect key="frame" x="143" y="470" width="128" height="106"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="APf-MP-bKW"/>
+                                    <constraint firstAttribute="width" secondItem="FX9-Jz-p5n" secondAttribute="height" multiplier="64:53" id="VId-4W-k1J"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZNp-wg-CrQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="FX9-Jz-p5n" firstAttribute="centerX" secondItem="Um3-8d-cmS" secondAttribute="centerX" id="5Vs-XO-Wgd"/>
+                            <constraint firstItem="FX9-Jz-p5n" firstAttribute="top" secondItem="7bs-PD-UYR" secondAttribute="bottom" constant="79" id="6Co-46-aRJ"/>
+                            <constraint firstItem="Px8-Vp-v77" firstAttribute="centerX" secondItem="Um3-8d-cmS" secondAttribute="centerX" id="Ifv-Tk-nzt"/>
+                            <constraint firstItem="0Ok-9h-RKY" firstAttribute="centerX" secondItem="Um3-8d-cmS" secondAttribute="centerX" id="JGE-OX-MDt"/>
+                            <constraint firstItem="7bs-PD-UYR" firstAttribute="top" secondItem="0Ok-9h-RKY" secondAttribute="bottom" constant="37" id="LMI-FP-O35"/>
+                            <constraint firstItem="7bs-PD-UYR" firstAttribute="centerX" secondItem="Um3-8d-cmS" secondAttribute="centerX" id="QUp-Cs-vVi"/>
+                            <constraint firstItem="0Ok-9h-RKY" firstAttribute="top" secondItem="Px8-Vp-v77" secondAttribute="bottom" constant="131" id="qh1-sL-Zpw"/>
+                            <constraint firstItem="Px8-Vp-v77" firstAttribute="top" secondItem="ZNp-wg-CrQ" secondAttribute="top" constant="99" id="zKy-7T-rrB"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="privateLabel" destination="7bs-PD-UYR" id="r8J-Jt-vlg"/>
